--- a/assets/css/Style.css
+++ b/assets/css/Style.css
@@ -5,99 +5,70 @@
 }
 
 html{
+  color-scheme: dark;
+  color: #fffd;
+  box-shadow: #000c 0 0 0.5rem;
+  text-align: center;
 }
 
 body{
-  background: #f1f1f1;
+  display: flex;
+  flex-direction: column;
+}
+
+h1 {
+  font-size: 100px;
+}
+
+p {
+  font-size: 1.5rem;
+  line-height: 140%;
+}
+
+.full-screen {
+  height: 100vh;
+  width: 100vw;
+  background: linear-gradient(30deg ,#252525 -10%, #151515 );
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 8rem 8rem 16rem 16rem;
+  position: relative;
 }
 
           /* Body */
 
-body > :nth-child(1) {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
+h1 {
+  margin-top: auto;
+  z-index: 1;
 }
 
-body > :nth-child(1) > * {
-  font-size: 2rem;
-  font-weight: 600;
-  border: 0;
-  background: #D6F8D6;
-  color: #000a;
-  padding: 1em 2em;
-  box-shadow: #1113 0 0 1rem;
-  border-radius: .125rem;
-  animation: name 3s ease-in-out infinite both;
-  cursor: pointer;
-}
-          
-          /* Animation */
-
-@keyframes name {
-  0%{
-    scale: 1;
-  }
-  50% {
-    scale: 1.05;
-  }
-  100%{
-    scale: 1;
-  }
-}
-
-          /* Responsive */
-
-
-@media screen and (min-width:calc(1920px * calc(1 + 1/2) - 100px)) {
-  html{
-    font-size: calc(16px * calc(1 + 1/2));
-  }
-}
-
-@media screen and (min-width:calc(1920px * calc(1 + 1/3) - 200px)) {
-  html{
-    font-size: calc(16px * calc(1 + 1/3));
-  }
-}
-
-@media screen and (min-width:calc(1920px * calc(1 + 1/1) - 300px)) {
-  html{
-    font-size: calc(16px * calc(1 + 1/1));
-  }
-}
-
-@media screen and (min-width:calc(1920px * calc(1 + 2/1) - 400px)) {
-  html{
-    font-size: calc(16px * calc(1 + 2/1));
-  }
-}
-
-@media screen and (min-width:calc(1920px * calc(1 + 3/1) - 500px)) {
-  html{
-    font-size: calc(16px * calc(1 + 3/1));
-  }
+.container > p:nth-of-type(1) {
+  align-self: flex-start;
+  text-align: left;
+  margin: 0%;
+  z-index: 1;
+} 
+.container > p:nth-of-type(2) {
+  align-self: flex-end;
+  margin-top: auto;
+  text-align: right;
+  z-index: 1;
+} 
+.container img {
+  position: absolute;
+  z-index: 0;
+  width: calc(100vw - 8rem);
+  height: calc(100vh - 8rem);
+  top: 0%;
+  right: 0%;
+  left: 8rem;
+  bottom: 8rem;
+  opacity: 0.8;
+  border: 2px solid #0008;
+  border-top: 0;
+  border-right: 0;
 }
 
           /* Custom-Scrollbar */
-
-/* width */
-::-webkit-scrollbar {
-  width: .625rem;
-}
-
-/* Track */
-::-webkit-scrollbar-track {
-  background: #f1f1f1;
-}
-
-/* Handle */
-::-webkit-scrollbar-thumb {
-  background: #888;
-}
-
-/* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-  background: #555;
-}
